<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.expediagroup</groupId>
    <artifactId>eg-oss-parent</artifactId>
    <version>3.0.1</version>
  </parent>

  <artifactId>drone-fly-parent</artifactId>
  <version>1.0.9-SNAPSHOT</version>
  <inceptionYear>2020</inceptionYear>
  <packaging>pom</packaging>
  <name>drone-fly</name>
  <url>https://github.com/ExpediaGroup/drone-fly</url>


  <modules>
    <module>drone-fly-core</module>
    <module>drone-fly-app</module>
    <module>drone-fly-integration-tests</module>
  </modules>

  <properties>
    <!-- Override eg-oss-parent jdk.version=1.8 to target Java 21 -->
    <jdk.version>21</jdk.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.release>21</maven.compiler.release>
    <javadoc.source.version>21</javadoc.source.version>

    <!-- Override eg-oss-parent plugin versions for Java 21 compatibility -->
    <spotless.maven.plugin.version>2.43.0</spotless.maven.plugin.version>
    <jacoco.version>0.8.12</jacoco.version>
    <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
    <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>

    <springframework.boot.version>3.2.12</springframework.boot.version>
    <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
    <jib.maven.plugin.version>3.4.3</jib.maven.plugin.version>
    <docker.from.image>amazoncorretto</docker.from.image>
    <docker.from.tag>21</docker.from.tag>
    <docker.from.reference>${docker.from.image}:${docker.from.tag}</docker.from.reference>
    <docker.registry>expediagroup</docker.registry>
    <docker.to.image>${project.artifactId}</docker.to.image>
    <docker.to.reference>${dockerhub.url}/${docker.registry}/${docker.to.image}:${docker.to.tag}</docker.to.reference>
    <docker.to.tag>${project.version}</docker.to.tag>
    <dockerhub.url>docker.io</dockerhub.url>
    <msk.iam.version>2.2.0</msk.iam.version>
    <skip.tests>true</skip.tests>
  </properties>

  <scm>
    <connection>scm:git:https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/ExpediaGroup/drone-fly.git</connection>
    <developerConnection>scm:git:https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/ExpediaGroup/drone-fly.git
    </developerConnection>
    <url>https://github.com/ExpediaGroup/drone-fly</url>
    <tag>drone-fly-parent-1.0.1</tag>
  </scm>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${springframework.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.google.cloud.tools</groupId>
          <artifactId>jib-maven-plugin</artifactId>
          <version>${jib.maven.plugin.version}</version>
          <executions>
            <execution>
              <id>deploy</id>
              <phase>deploy</phase>
              <goals>
                <goal>build</goal>
              </goals>
            </execution>
            <execution>
              <id>package</id>
              <phase>package</phase>
              <goals>
                <goal>dockerBuild</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <from>
              <image>${docker.from.reference}</image>
              <platforms>
                  <platform>
                      <architecture>amd64</architecture>
                      <os>linux</os>
                  </platform>
                  <platform>
                      <architecture>arm64</architecture>
                      <os>linux</os>
                  </platform>
              </platforms>
            </from>
            <to>
              <image>${docker.to.reference}</image>
              <auth>
                <username>${DOCKERHUB_USERNAME}</username>
                <password>${DOCKERHUB_PASSWORD}</password>
              </auth>
            </to>
            <container>
              <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
              <!-- The following port does not matter in K8s -->
              <ports>
                <port>${docker.container.port}</port>
              </ports>
              <jvmFlags>
                <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/java.io=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/java.util=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
                <jvmFlag>--add-opens=java.base/java.security=ALL-UNNAMED</jvmFlag>
              </jvmFlags>
            </container>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>${maven.shade.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <release>21</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.maven.plugin.version}</version>
          <configuration>
            <java>
              <removeUnusedImports />
              <importOrder>
                <order>${spotless.config.import.order.def}</order>
              </importOrder>
              <googleJavaFormat>
                <version>1.19.2</version>
              </googleJavaFormat>
            </java>
            <skip>${spotless.config.execution.skip}</skip>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
            <argLine>
              @{argLine}
              --add-opens java.base/java.lang=ALL-UNNAMED
              --add-opens java.base/java.lang.reflect=ALL-UNNAMED
              --add-opens java.base/java.io=ALL-UNNAMED
              --add-opens java.base/java.net=ALL-UNNAMED
              --add-opens java.base/java.nio=ALL-UNNAMED
              --add-opens java.base/java.util=ALL-UNNAMED
              --add-opens java.base/java.util.concurrent=ALL-UNNAMED
              --add-opens java.base/sun.nio.ch=ALL-UNNAMED
              --add-opens java.base/java.security=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${license.maven.plugin.version}</version>
          <configuration>
            <!-- excluding files that don't need a header update -->
            <excludes>
              <exclude>src/main/java/com/expediagroup/dataplatform/dronefly/app/service/ListenerCatalog.java</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${springframework.boot.version}</version>
          <configuration>
            <mainClass>com.expediagroup.dataplatform.dronefly.app.DroneFly</mainClass>
            <layout>ZIP</layout>
            <requiresUnpack>
              <!-- We are hitting an issue introduced in hive-common-2.1.1 and fixed in https://issues.apache.org/jira/browse/HIVE-17155
                The HiveConf class tries loading conf (e.g. hive-site.xml) from the uberjar and fails. Unpacking it with
                this setting fixes that problem.
              -->
              <dependency>
                <groupId>org.apache.hive</groupId>
                <artifactId>hive-common</artifactId>
              </dependency>
            </requiresUnpack>
            <!-- executable=true breaks the sonatype deployments. -->
            <executable>false</executable>
            <classifier>exec</classifier>
            <excludeGroupIds>org.mortbay.jetty,org.eclipse.jetty,org.eclipse.jetty.aggregate,org.eclipse.jetty.orbit
            </excludeGroupIds>
            <excludes>
              <exclude>
                <groupId>org.codehaus.jettison</groupId>
                <artifactId>jettison</artifactId>
              </exclude>
            </excludes>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
